Tue Oct 21 13:53:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-netbsd.h:
          NetBSD lacks wscanf and swscanf

Tue Oct 21 12:41:09 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * apps/gperf/src/Options.h:
        * apps/gperf/src/Options.cpp:
        * ACEXML/common/HttpCharStream.cpp:

          Fixed incorrect use of ACE_TEXT_* conversion macros.

Tue Oct 21 11:25:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Changed ACE_OS test to level 5

Tue Oct 21 09:30:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h
        * ace/config-win32-common.h
        * ace/config-win32-msvc.h
        * ace/OS_NS_stdlib.inl
          WinCE doesn't have wtof, so reworked the defines. Set ACE_HAS_WTOF
          when the platform has wtof, with ACE_WTOF_EQUIVALENT a different
          method name could be used (like ::_wtof)

Tue Oct 21 07:15:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdio.{h,cpp}:
          Added wrappers for sscanf/scanf

        * bin/fuzz.pl:
          Extended ACE_OS check with scanf/sscanf

Tue Oct 21 00:04:26 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Proactor_UDP_Test.cpp: Attempt to avoid lock-ups on non-Windows
          targets. HP-UX, AIX, et al., can't cancel an in-progress UDP recv()
          so stop the Master from trying more receives when all the expected
          sessions are up.

Mon Oct 20 13:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended ACE_OS check with atof/atol/raise

        * apps/JAWS3/bench/rqfiles.cpp:
          Use ACE_OS::atof

Mon Oct 20 12:01:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.{h,inl}:
          Added atof and atol wrappers

Mon Oct 20 07:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * contrib/FaCE/FaCENOACE.mpc: