@@ -827,7 +827,7 @@ int producer (MCT_Config &config)
 int advance_addr (ACE_INET_Addr &addr)
 {
   int a, b, c, d;
-  ::sscanf (addr.get_host_addr (), "%d.%d.%d.%d", &a, &b, &c, &d);
+  ACE_OS::sscanf (addr.get_host_addr (), "%d.%d.%d.%d", &a, &b, &c, &d);
   if (d < 255)
     ++d;
   else if (c < 255)
